--- a/03_Functional_Interpretation/scripts/enrichment_04_goshifter.ipynb
+++ b/03_Functional_Interpretation/scripts/enrichment_04_goshifter.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "id": "82bb73a7-3cde-47fc-8bef-9b3316f69904",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "81dd537f-431c-4cf8-ab8c-1d5da58916f2",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b6751642-fa0f-47f5-8c36-aaaf51526c04",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8c5a93e9-9017-4a8b-9ffc-b01c7bb92caa",
    "metadata": {},
    "outputs": [],
@@ -165,13 +165,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "16042ab8-15a4-4de7-8d01-84f8c435611d",
    "metadata": {},
    "outputs": [],
    "source": [
     "gene.info <- read.table(\"/nfs/team282/data/gains_team282/gene_info_864_20412_hla.txt\") %>%\n",
     "    dplyr::select(gene_id, gene_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3cca4459-1593-4426-aa9f-7fa5f9b07acf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lineages <- read.csv(\"03_Functional_Interpretation/data/Calderon_et_al_lineages.csv\") %>%\n",
+    "    dplyr::bind_rows(c(\"Lineage\"=\"MYELOID\", \"Cell_Type\"=\"Neutrophils\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "087535d5-94f3-4f74-bf64-080a6b7c6822",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Lineage</th><th scope=col>Cell_Type</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>B  </td><td>Bulk_B                 </td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>B  </td><td>Mem_B                  </td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>B  </td><td>Naive_B                </td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>B  </td><td>Plasmablasts           </td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>CD8</td><td>CD8pos_T               </td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>CD8</td><td>Central_memory_CD8pos_T</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 2\n",
+       "\\begin{tabular}{r|ll}\n",
+       "  & Lineage & Cell\\_Type\\\\\n",
+       "  & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t1 & B   & Bulk\\_B                 \\\\\n",
+       "\t2 & B   & Mem\\_B                  \\\\\n",
+       "\t3 & B   & Naive\\_B                \\\\\n",
+       "\t4 & B   & Plasmablasts           \\\\\n",
+       "\t5 & CD8 & CD8pos\\_T               \\\\\n",
+       "\t6 & CD8 & Central\\_memory\\_CD8pos\\_T\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 2\n",
+       "\n",
+       "| <!--/--> | Lineage &lt;chr&gt; | Cell_Type &lt;chr&gt; |\n",
+       "|---|---|---|\n",
+       "| 1 | B   | Bulk_B                  |\n",
+       "| 2 | B   | Mem_B                   |\n",
+       "| 3 | B   | Naive_B                 |\n",
+       "| 4 | B   | Plasmablasts            |\n",
+       "| 5 | CD8 | CD8pos_T                |\n",
+       "| 6 | CD8 | Central_memory_CD8pos_T |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Lineage Cell_Type              \n",
+       "1 B       Bulk_B                 \n",
+       "2 B       Mem_B                  \n",
+       "3 B       Naive_B                \n",
+       "4 B       Plasmablasts           \n",
+       "5 CD8     CD8pos_T               \n",
+       "6 CD8     Central_memory_CD8pos_T"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(lineages)"
    ]
   },
   {
@@ -196,28 +278,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
+   "id": "aa69b89d-356b-4c11-b9b0-91ad1dab6683",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control.score.mtx <- overlap.scores %>%\n",
+    "    dplyr::filter(!grepl(\"Neutrophils\", Group)) %>%\n",
+    "    dplyr::filter(grepl(\"-Control\", Group)) %>%\n",
+    "    dplyr::mutate(Cell_Type = gsub(\"-Control\", \"\", Group)) %>%\n",
+    "    dplyr::select(Locus, Cell_Type, Overlap_Score) %>%\n",
+    "    tidyr::spread(Cell_Type, Overlap_Score) %>%\n",
+    "    dplyr::arrange(Locus)\n",
+    "\n",
+    "rownames(control.score.mtx) <- control.score.mtx$Locus\n",
+    "control.score.mtx$Locus <- NULL\n",
+    "control.score.mtx <- 1 - as.matrix(control.score.mtx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2ec7e576-24d0-432f-89a6-7782f9509eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treated.score.mtx <- overlap.scores %>%\n",
+    "    dplyr::filter(!grepl(\"Neutrophils\", Group)) %>%\n",
+    "    dplyr::filter(grepl(\"-Stimulated\", Group)) %>%\n",
+    "    dplyr::mutate(Cell_Type = gsub(\"-Stimulated\", \"\", Group)) %>%\n",
+    "    dplyr::select(Locus, Cell_Type, Overlap_Score) %>%\n",
+    "    tidyr::spread(Cell_Type, Overlap_Score) %>%\n",
+    "    dplyr::arrange(Locus)\n",
+    "\n",
+    "rownames(treated.score.mtx) <- treated.score.mtx$Locus\n",
+    "treated.score.mtx$Locus <- NULL\n",
+    "treated.score.mtx <- 1 - as.matrix(treated.score.mtx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "89f4f1ab-b93a-418d-8935-5cba5e5c79e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "score.mtx <- overlap.scores %>%\n",
-    "    dplyr::select(Locus, Group, Overlap_Score) %>%\n",
-    "    tidyr::spread(Group, Overlap_Score)\n",
+    "    dplyr::filter(grepl(\"Neutrophils-\", Group)) %>%\n",
+    "    dplyr::mutate(Treatment = gsub(\"Neutrophils-\", \"\", Group)) %>%\n",
+    "    dplyr::select(Locus, Treatment, Overlap_Score) %>%\n",
+    "    tidyr::spread(Treatment, Overlap_Score)\n",
     "\n",
     "rownames(score.mtx) <- score.mtx$Locus\n",
     "score.mtx$Locus <- NULL\n",
-    "score.mtx <- 1 - as.matrix(score.mtx)\n",
-    "\n",
-    "score.mtx <- score.mtx[rowSums(score.mtx) != 0, ]"
+    "score.mtx <- 1 - as.matrix(score.mtx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 36,
+   "id": "040786a6-474f-4832-99fa-e4079159fbe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask <- rowSums(control.score.mtx) != 0 & rowSums(treated.score.mtx) != 0 & rowSums(score.mtx) != 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "42ebc574-1e73-4776-85d9-87f87b549163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control.score.mtx <- control.score.mtx[mask, ]\n",
+    "treated.score.mtx <- treated.score.mtx[mask, ]\n",
+    "score.mtx <- score.mtx[mask, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3fa867d2-7acc-411e-9afa-bc1269550a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h <- hclust(dist(cbind(control.score.mtx, treated.score.mtx, score.mtx)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cc03786d-5f49-4bab-8781-a362119f1dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control.score.mtx <- control.score.mtx[h$order, ]\n",
+    "treated.score.mtx <- treated.score.mtx[h$order, ]\n",
+    "score.mtx <- score.mtx[h$order, ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4edd524d-22ec-4c5e-94a0-bfd7014a8037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neutrophil.map <- c(\n",
+    "    \"BGP\" = \"Stimulation\", \"Control\" = \"Stimulation\", \"FLAG\" = \"Stimulation\", \"HMGB1\" = \"Stimulation\", \"LPS\" = \"Stimulation\", \"LTA\" = \"Stimulation\", \"R848\" = \"Stimulation\",\n",
+    "    \"SA-1\" = \"S. aureus\", \"SA-3\" = \"S. aureus\", \"SA-5\" = \"S. aureus\", \"WB\" = \"S. aureus\",\n",
+    "    \"EC1h\" = \"E. coli\", \"EC4h\" = \"E. coli\", \"noEC1h\" = \"E. coli\", \"noEC4h\" = \"E. coli\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "a9d33640-a8f2-4705-988e-a19d0222e887",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“Heatmap/annotation names are duplicated: Score”\n",
+      "Warning message:\n",
+      "“Heatmap/annotation names are duplicated: Score, Score”\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -239,38 +429,52 @@
     }
    ],
    "source": [
-    "options(repr.plot.width=18, repr.plot.height=24)\n",
+    "options(repr.plot.width=15, repr.plot.height=24)\n",
     "\n",
     "col_fun = colorRamp2(c(0, 1), c(\"white\", \"royalblue4\"))\n",
     "\n",
-    "ht = Heatmap(\n",
-    "    score.mtx, name=\"Score\", \n",
+    "h1 = Heatmap(\n",
+    "    control.score.mtx, name=\"Score\", \n",
     "    use_raster=TRUE, col=col_fun,\n",
-    "    show_row_dend=F, show_column_dend=F, show_row_names=F,\n",
+    "    cluster_rows=F, show_column_dend=F, show_row_names=F,\n",
     "    column_names_max_height = max_text_width(\n",
-    "        colnames(specificity.mtx), \n",
+    "        colnames(control.score.mtx), \n",
     "        gp = gpar(fontsize = 12)\n",
     "    ),\n",
-    "    column_names_rot = 45, column_title=NULL,\n",
+    "    column_split=lineages$Lineage[match(colnames(control.score.mtx), lineages$Cell_Type)]\n",
     ")\n",
     "\n",
-    "pdf(\"04_Expression/results/goshifter_score_matrix.pdf\", width=18, height=24)\n",
-    "draw(ht, padding = unit(c(4, 30, 2, 2), \"mm\"))\n",
+    "h2 = Heatmap(\n",
+    "    treated.score.mtx, name=\"Score\", \n",
+    "    use_raster=TRUE, col=col_fun,\n",
+    "    cluster_rows=F, show_column_dend=F, show_row_names=F,\n",
+    "    column_names_max_height = max_text_width(\n",
+    "        colnames(treated.score.mtx), \n",
+    "        gp = gpar(fontsize = 12)\n",
+    "    ),\n",
+    "    column_split=lineages$Lineage[match(colnames(treated.score.mtx), lineages$Cell_Type)]\n",
+    ")\n",
+    "\n",
+    "h3 = Heatmap(\n",
+    "    score.mtx, name=\"Score\", \n",
+    "    use_raster=TRUE, col=col_fun,\n",
+    "    cluster_rows=F, show_column_dend=F, show_row_names=F,\n",
+    "    column_names_max_height = max_text_width(\n",
+    "        colnames(score.mtx), \n",
+    "        gp = gpar(fontsize = 12)\n",
+    "    ),\n",
+    "    column_split=neutrophil.map[colnames(score.mtx)]\n",
+    ")\n",
+    "\n",
+    "pdf(\"03_Functional_Interpretation/results/goshifter_score_matrix.pdf\", width=15, height=24)\n",
+    "h1 + h2 + h3\n",
     "dev.off()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9724d658-57a0-41f3-9449-1ed1086c0bbf",
-   "metadata": {},
-   "source": [
-    "Take the Euclidean norm of each row."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c25fa81-b495-451a-bfcc-2a2afbba3d34",
+   "id": "7b560b8e-0d64-4215-bbfa-3aa6d55cc047",
    "metadata": {},
    "outputs": [],
    "source": []
