--- a/04_Expression/scripts/wgcna_09_eigengene_sva_analysis.ipynb
+++ b/04_Expression/scripts/wgcna_09_eigengene_sva_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9b48beed-9062-4f5e-b496-5c91855bd3b5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "244dc510-997d-4a87-b5ee-96d685fdadab",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
+   "id": "98af6efb-712b-414e-93fe-53603f032e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mqtl.snp.table <- read.csv(\"~/gains_team282/nikhil/expression/eigengene_sva/mqtl_snp_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "afbed442-e3b5-4a1f-bcfc-47487ac9d3f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>snps</th><th scope=col>source</th><th scope=col>egene</th><th scope=col>conditional_number</th><th scope=col>accession</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>rs3131972 </td><td>Lead cis-eQTL SNP</td><td>ENSG00000237491</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>rs3131972 </td><td>Lead cis-eQTL SNP</td><td>ENSG00000230092</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>rs3131972 </td><td>Lead cis-eQTL SNP</td><td>ENSG00000225880</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>rs2272757 </td><td>Lead cis-eQTL SNP</td><td>ENSG00000188976</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>rs13303327</td><td>Lead cis-eQTL SNP</td><td>ENSG00000187961</td><td>NA</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>rs13303056</td><td>Lead cis-eQTL SNP</td><td>ENSG00000187583</td><td>NA</td><td>NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 5\n",
+       "\\begin{tabular}{r|lllll}\n",
+       "  & snps & source & egene & conditional\\_number & accession\\\\\n",
+       "  & <chr> & <chr> & <chr> & <int> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t1 & rs3131972  & Lead cis-eQTL SNP & ENSG00000237491 & NA & NA\\\\\n",
+       "\t2 & rs3131972  & Lead cis-eQTL SNP & ENSG00000230092 & NA & NA\\\\\n",
+       "\t3 & rs3131972  & Lead cis-eQTL SNP & ENSG00000225880 & NA & NA\\\\\n",
+       "\t4 & rs2272757  & Lead cis-eQTL SNP & ENSG00000188976 & NA & NA\\\\\n",
+       "\t5 & rs13303327 & Lead cis-eQTL SNP & ENSG00000187961 & NA & NA\\\\\n",
+       "\t6 & rs13303056 & Lead cis-eQTL SNP & ENSG00000187583 & NA & NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 5\n",
+       "\n",
+       "| <!--/--> | snps &lt;chr&gt; | source &lt;chr&gt; | egene &lt;chr&gt; | conditional_number &lt;int&gt; | accession &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 1 | rs3131972  | Lead cis-eQTL SNP | ENSG00000237491 | NA | NA |\n",
+       "| 2 | rs3131972  | Lead cis-eQTL SNP | ENSG00000230092 | NA | NA |\n",
+       "| 3 | rs3131972  | Lead cis-eQTL SNP | ENSG00000225880 | NA | NA |\n",
+       "| 4 | rs2272757  | Lead cis-eQTL SNP | ENSG00000188976 | NA | NA |\n",
+       "| 5 | rs13303327 | Lead cis-eQTL SNP | ENSG00000187961 | NA | NA |\n",
+       "| 6 | rs13303056 | Lead cis-eQTL SNP | ENSG00000187583 | NA | NA |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  snps       source            egene           conditional_number accession\n",
+       "1 rs3131972  Lead cis-eQTL SNP ENSG00000237491 NA                 NA       \n",
+       "2 rs3131972  Lead cis-eQTL SNP ENSG00000230092 NA                 NA       \n",
+       "3 rs3131972  Lead cis-eQTL SNP ENSG00000225880 NA                 NA       \n",
+       "4 rs2272757  Lead cis-eQTL SNP ENSG00000188976 NA                 NA       \n",
+       "5 rs13303327 Lead cis-eQTL SNP ENSG00000187961 NA                 NA       \n",
+       "6 rs13303056 Lead cis-eQTL SNP ENSG00000187583 NA                 NA       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(mqtl.snp.table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b41c2bf1-d717-47ac-8b62-8bbbf20b5195",
    "metadata": {},
    "outputs": [],
@@ -250,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "3ead7e58-c5e3-4637-8d0d-1a9468c95ba0",
    "metadata": {},
    "outputs": [],
@@ -266,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "3f5e225f-629a-4b48-9d28-39829632ef32",
    "metadata": {},
    "outputs": [],
@@ -278,13 +359,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "682f4317-4151-4b82-96ba-b38b2fbe23a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "num.modules <- length(unique(me.assocs$me))\n",
     "num.snps <- length(unique(me.assocs$snp))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c4f52ad-6acb-4d7d-8c7c-5ee44f09157c",
+   "metadata": {},
+   "source": [
+    "Proportions of input SNPs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8f3aadf6-9055-4727-a26e-34312e3d35b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 3 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>source</th><th scope=col>n</th><th scope=col>prop</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Conditional cis-eQTL SNP</td><td>14937</td><td>0.2124751</td></tr>\n",
+       "\t<tr><td>EBI GWAS Catalog        </td><td>55550</td><td>0.7901849</td></tr>\n",
+       "\t<tr><td>Lead cis-eQTL SNP       </td><td> 9941</td><td>0.1414083</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 3 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " source & n & prop\\\\\n",
+       " <chr> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t Conditional cis-eQTL SNP & 14937 & 0.2124751\\\\\n",
+       "\t EBI GWAS Catalog         & 55550 & 0.7901849\\\\\n",
+       "\t Lead cis-eQTL SNP        &  9941 & 0.1414083\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 3 × 3\n",
+       "\n",
+       "| source &lt;chr&gt; | n &lt;int&gt; | prop &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| Conditional cis-eQTL SNP | 14937 | 0.2124751 |\n",
+       "| EBI GWAS Catalog         | 55550 | 0.7901849 |\n",
+       "| Lead cis-eQTL SNP        |  9941 | 0.1414083 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  source                   n     prop     \n",
+       "1 Conditional cis-eQTL SNP 14937 0.2124751\n",
+       "2 EBI GWAS Catalog         55550 0.7901849\n",
+       "3 Lead cis-eQTL SNP         9941 0.1414083"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mqtl.snp.table %>%\n",
+    "    dplyr::filter(snps %in% me.assocs$snp) %>%\n",
+    "    dplyr::select(snps, source) %>%\n",
+    "    unique() %>%\n",
+    "    dplyr::count(source) %>%\n",
+    "    dplyr::mutate(prop = n / num.snps)"
    ]
   },
   {
